cargo-features = ["profile-rustflags"]

[package]
name = "glintscript"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
strip = true
lto = true
codegen-units = 1
rustflags = [
  "--remap-path-prefix=C:\\Users\\$(whoami)\\=",
  "--remap-path-prefix=$HOME/=",
]

[dependencies]
anyhow = "1.0.99"
eldenring = { git = "https://github.com/vswarte/fromsoftware-rs.git", rev = "5817d1a3" }
eldenring-util = { git = "https://github.com/vswarte/fromsoftware-rs.git", rev = "5817d1a3" }
from-singleton = "2.0.1"
fromsoftware-shared = { git = "https://github.com/vswarte/fromsoftware-rs.git", rev = "5817d1a3" }
me3-mod-protocol = { git = "https://github.com/garyttierney/me3.git", tag = "v0.9.0" }
microseh = "1.1.2"
mlua = { version = "0.11.3", features = ["lua54", "vendored", "send"] }
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
pelite = "0.10.0"
serde_json = "1.0.145"
toml = "0.9.5"
windows = { version = "0.54.0", features = [
  "Win32_System_Console",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
] }

# https://github.com/CasualX/pelite/issues/287
[patch.crates-io]
pelite = { git = "https://github.com/CasualX/pelite.git" }
