[package]
name = "glintscript"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
strip = true
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.99"
eldenring = { git = "https://github.com/vswarte/fromsoftware-rs.git", rev = "f21c34a5" }
from-singleton = "2.0.1"
fromsoftware-shared = { git = "https://github.com/vswarte/fromsoftware-rs.git", rev = "f21c34a5" }
me3-mod-protocol = { git = "https://github.com/garyttierney/me3.git", tag = "v0.9.0" }
microseh = "1.1.2"
mlua = { version = "0.11.3", features = [
  "lua54",
  "vendored",
  "send",
  "macros",
] }
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
pelite = "0.10.0"
serde_json = "1.0.145"
toml = "0.9.5"
windows = { version = "0.54.0", features = [
  "Win32_System_Console",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
] }
